--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Express backend for alumni project",
-  "main": "server.js",
+  "description": "Backend for the project deployed on Vercel",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx vercel dev",
+    "start": "node api/index.js"
   },
-  "author": "Satyam Karn",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "appwrite": "^15.0.0",
@@ -23,11 +23,11 @@
     "jsonwebtoken": "^9.0.2",
     "localtunnel": "^2.0.2",
     "mongodb": "^6.8.0",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "vercel": "^30.0.4"
   }
 }
